[metadata]
name = kyoto-reader
;version = attr: kyoto_reader.__version__
version = file: src/kyoto_reader/VERSION
author = Kurohashi-Kawahara Lab, Kyoto University
author_email = contact@nlp.ist.i.kyoto-u.ac.jp
description = A KWDLC and KyotoCorpus parser
long_description = file: README.md
long_description_content_type = text/markdown
keywords = NLP, KWDLC, KyotoCorpus, parser
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find:
install_requires =
  pyknp
  jaconv
python_requires = >=3.6

[options.extras_require]
testing =
  pytest

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    configure = kyoto_reader.scripts.configure:main
    add-sems = kyoto_reader.scripts.add_sems:main
    idsplit = kyoto_reader.scripts.idsplit:main
